objects/zkusps__PackageProfile__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__CountryOfOrigin__c</fullName>
        <label>Country of Origin</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CustomsItemName__c</fullName>
        <label>Customs Item Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CustomsItemProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customs Item Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__HSTariffNumber__c</fullName>
        <label>HS Tariff Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Height__c</fullName>
        <label>Height</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__Length__c</fullName>
        <label>Length</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__PackageProfileDescription__c</fullName>
        <label>Package Profile Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__PackageProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__Shape__c</fullName>
        <label>Mail Piece Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Value__c</fullName>
        <label>Value per Unit (USD)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__WeightOunces__c</fullName>
        <label>Weight Ounces</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__WeightPounds__c</fullName>
        <label>Weight Pounds</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__Width__c</fullName>
        <label>Width</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__ZKModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Package Profile</label>
    <listViews>
        <fullName>Nolan_Daigle_PackageProfile</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkusps__All_Customs_Item_Profiles</fullName>
        <columns>NAME</columns>
        <columns>zkusps__PackageProfileDescription__c</columns>
        <columns>zkusps__Shape__c</columns>
        <columns>zkusps__Quantity__c</columns>
        <columns>zkusps__Value__c</columns>
        <columns>zkusps__WeightPounds__c</columns>
        <columns>zkusps__WeightOunces__c</columns>
        <columns>zkusps__CountryOfOrigin__c</columns>
        <columns>zkusps__HSTariffNumber__c</columns>
        <columns>zkusps__Description__c</columns>
        <columns>zkusps__CustomsItemName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkusps__CustomsItemProfile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Customs Item Profiles</label>
    </listViews>
    <listViews>
        <fullName>zkusps__All_Package_Profiles</fullName>
        <columns>NAME</columns>
        <columns>zkusps__PackageProfileDescription__c</columns>
        <columns>zkusps__Shape__c</columns>
        <columns>zkusps__WeightPounds__c</columns>
        <columns>zkusps__WeightOunces__c</columns>
        <columns>zkusps__Length__c</columns>
        <columns>zkusps__Width__c</columns>
        <columns>zkusps__Height__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkusps__PackageProfile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Package Profiles</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>USPS Package Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Package Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>